changeLog
=================================================================================
Learning Changes
=================================================================================
1. commit-1: Learnt setState and wrote code to understand it.
2. commit-2: Render same element multiple times using map and why is key used in map.
4. commit-4: learning LifeCycle
7. commit-7: Opimizing changes
=================================================================================
Making App Changes
=================================================================================
3. commit-3: Calling open source jsonplacholder API for getting the names of monsters
5. commit-5: Added Searchbox to filter option. Used .map function and if condition to get the result
6. commit-6: Added Searchbox to filter option. Used .filter function
7. commit-7: Opimizing changes
8. commit-8: Creating Folder structures for General Components 
9. commit-9: Adding CSS
---------------------------------------------------------------------------------
Change to Functional Components 
---------------------------------------------------------------------------------
10. commit-10: Change from Class Components to Functional Components - adding hooks - useState
11. commit-11: Adding hook - useEffect to fetchMonster Names
=================================================================================