@@ -20,4 +20,5 @@ Change to Functional Components
 ---------------------------------------------------------------------------------
 10. commit-10: Change from Class Components to Functional Components - adding hooks - useState
 11. commit-11: Adding hook - useEffect to fetchMonster Names
+12. commit-12: Changing Remaining components to functional components
 =================================================================================
